--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -20,22 +20,23 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Barbell Bench Press
-    - Hepburn Method"
-        android:id="@+id/benchText"
+        android:text="Barbell Bench Press   "
+        android:id = "@+id/benchText"
         android:textColor="#ffffff"
-        android:textSize="22dp"
-        android:layout_gravity="center_horizontal|top"/>
+        android:textSize="32dp"
+        android:layout_centerHorizontal="true" />
+       />
 
             <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/bench"
-        android:layout_toEndOf="@+id/benchText"
         android:layout_below="@+id/benchText"
-                android:layout_gravity="center_horizontal|top"/>
+                android:layout_centerHorizontal="true" />
+
+
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -43,8 +44,9 @@
                 android:text="Cable Flies"
                 android:id="@+id/flyText"
                 android:textColor="#ffffff"
-                android:textSize="25dp"
-                android:layout_below="@+id/imageView"/>
+                android:textSize="32dp"
+                android:layout_below="@+id/imageView"
+                android:layout_centerHorizontal="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -52,22 +54,25 @@
                 android:text="Incline Barbell Press"
                 android:id="@+id/benchDetail"
                 android:textColor="#ffffff"
-                android:textSize="22dp"
-                android:layout_below="@+id/flies"/>
+                android:textSize="32dp"
+                android:layout_below="@+id/flies"
+                android:layout_centerHorizontal="true" />
 
             <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/incline"
         android:src="@drawable/incline"
-            android:layout_below="@+id/benchDetail"/>
+        android:layout_below="@+id/benchDetail"
+                android:layout_centerHorizontal="true" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/flies"
         android:src="@drawable/flies"
-        android:layout_below="@+id/flyText"/>
-
+        android:layout_below="@+id/flyText"
+        android:layout_centerHorizontal="true" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -75,10 +80,14 @@
                 android:text="BACK"
                 android:id="@+id/Sday1BACK"
                 android:layout_gravity="left|bottom"
+                android:layout_below="@+id/incline"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true" />
 
+
         </RelativeLayout>>
+
+
 
     </ScrollView>
 
