--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -17,70 +17,77 @@
             android:orientation="vertical"
             >
 
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="50dp"
-    android:textAppearance="?android:attr/textAppearanceLarge"
-    android:text="Barbell Squat
- - Hepburn Method"
-    android:id="@+id/squat"
-    android:layout_gravity="left|center_vertical"
-    android:layout_marginBottom="175dp"
-    android:textColor="#ffffff"
-    android:textSize="22dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Barbell Squat"
+                android:id="@+id/squat"
+                android:textColor="#ffffff"
+                android:textSize="32dp"
+                android:layout_gravity="center_horizontal" />
 
-    <ImageView
-        android:layout_width="176dp"
-        android:layout_height="176dp"
-        android:id="@+id/imageView"
-        android:layout_gravity="right|top"
-        android:layout_marginBottom="150dp"
-        android:src="@drawable/squat" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:src="@drawable/squat"
+                android:layout_gravity="center_horizontal"
+                android:layout_below="@+id/squat"
+                />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Leg Press"
-        android:id="@+id/legpress"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="20dp"
-        android:textColor="#ffffff"
-        android:textSize="22dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Leg Press"
+                android:id="@+id/legpress"
+                android:textColor="#ffffff"
+                android:textSize="32dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_below="@+id/imageView"/>
 
-    <ImageView
-        android:layout_width="176dp"
-        android:layout_height="176dp"
-        android:id="@+id/legpresspic"
-        android:layout_gravity="right|center"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/legpress" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/legpresspic"
+                android:src="@drawable/squat"
+                android:layout_gravity="center_horizontal"
+                android:layout_below="@+id/legpress"/>
 
-    <TextView
-        android:layout_width="219dp"
-        android:layout_height="63dp"
-        android:text="Calf Press"
-        android:id="@+id/flyText"
-        android:layout_gravity="bottom|center_vertical"
-        android:layout_marginBottom="100dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Calf Press"
+                android:id="@+id/flyText"
+                android:textColor="#ffffff"
+                android:textSize="32dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_below="@+id/legpresspic"/>
 
-    <ImageView
-        android:layout_width="179dp"
-        android:layout_height="120dp"
-        android:id="@+id/calfpresspic"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="60dp"
-        android:src="@drawable/calfpress" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/calfpresspic"
+                android:src="@drawable/calfpress"
+                android:layout_gravity="center_horizontal"
+                android:layout_below="@+id/flyText"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BACK"
-        android:id="@+id/Sday2BACK"
-        android:layout_gravity="center_horizontal|bottom" />
-</LinearLayout>>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BACK"
+                android:id="@+id/Sday2BACK"
+                android:layout_gravity="left|bottom"
+                android:layout_below="@+id/calfpresspic"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true" />
+
+
+
+
+
+
+
+        </LinearLayout>>
 
     </ScrollView>
 
