--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -28,6 +28,7 @@
        />
 
             <ImageView
+                android:scaleType="fitXY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
@@ -59,6 +60,7 @@
                 android:layout_centerHorizontal="true" />
 
             <ImageView
+                android:scaleType="fitXY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/incline"
@@ -66,19 +68,24 @@
         android:layout_below="@+id/benchDetail"
                 android:layout_centerHorizontal="true" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/flies"
-        android:src="@drawable/flies"
-        android:layout_below="@+id/flyText"
-        android:layout_centerHorizontal="true" />
+            <ImageView
+
+                android:scaleType="fitXY"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+
+                android:id="@+id/flies"
+                android:src="@drawable/flies"
+                android:layout_below="@+id/flyText"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentEnd="true" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="BACK"
                 android:id="@+id/Sday1BACK"
+
                 android:layout_gravity="left|bottom"
                 android:layout_below="@+id/incline"
                 android:layout_alignParentBottom="true"
