--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -36,8 +36,9 @@
         android:textColor="#ffffff" />
 
     <ImageView
-        android:layout_width="141dp"
-        android:layout_height="121dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/hammerCurlImage"
         android:layout_gravity="right|top"
         android:layout_marginBottom="120dp"
@@ -56,8 +57,9 @@
         android:textSize="25dp" />
 
     <ImageView
-        android:layout_width="126dp"
-        android:layout_height="126dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/preacherCurlImage"
         android:layout_gravity="right|center_vertical"
         android:layout_marginBottom="35dp"
@@ -92,8 +94,9 @@
         android:textSize="25dp" />
 
     <ImageView
-        android:layout_width="153dp"
-        android:layout_height="153dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/closegrippushupImage"
         android:layout_gravity="right|bottom"
         android:layout_marginBottom="70dp"
