--- a/app/src/main/res/layout/fragment_body_building_one.xml
+++ b/app/src/main/res/layout/fragment_body_building_one.xml
@@ -35,8 +35,9 @@
         android:textColor="#ffffff" />
 
     <ImageView
-        android:layout_width="141dp"
-        android:layout_height="100dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/squatImage"
         android:layout_gravity="right|top"
         android:layout_marginBottom="200dp"
@@ -54,8 +55,9 @@
         android:textSize="25dp" />
 
     <ImageView
-        android:layout_width="126dp"
-        android:layout_height="126dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/legExtensionImage"
         android:layout_gravity="right|center_vertical"
         android:layout_marginBottom="35dp"
@@ -90,8 +92,9 @@
         android:textSize="25dp" />
 
     <ImageView
-        android:layout_width="153dp"
-        android:layout_height="153dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/curlImage"
         android:layout_gravity="right|bottom"
         android:layout_marginBottom="70dp"
