--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -41,8 +41,9 @@
         android:textSize="22dp" />
 
     <ImageView
-        android:layout_width="176dp"
-        android:layout_height="176dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:layout_gravity="right|top"
         android:layout_marginBottom="150dp"
@@ -60,8 +61,9 @@
         android:textSize="22dp" />
 
     <ImageView
-        android:layout_width="176dp"
-        android:layout_height="176dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/legpresspic"
         android:layout_gravity="right|center"
         android:layout_marginBottom="10dp"
@@ -78,8 +80,9 @@
         android:textSize="25dp" />
 
     <ImageView
-        android:layout_width="179dp"
-        android:layout_height="120dp"
+        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/ohppic"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="60dp"
