--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -27,6 +27,7 @@
                 android:layout_gravity="center_horizontal" />
 
             <ImageView
+                android:scaleType="fitXY"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView"
@@ -46,6 +47,7 @@
                 android:layout_below="@+id/imageView"/>
 
             <ImageView
+                android:scaleType="fitXY"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/legpresspic"
@@ -64,6 +66,7 @@
                 android:layout_below="@+id/legpresspic"/>
 
             <ImageView
+                android:scaleType="fitXY"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/calfpresspic"
