--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -26,83 +26,79 @@
         android:layout_width="fill_parent"
         android:orientation="vertical"
         >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bench Press"
+            android:id="@+id/bench"
+            android:textColor="#ffffff"
+            android:textSize="32dp"
+            android:layout_gravity="center_horizontal"/>
+
+        <ImageView
+            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/bench"
+            android:layout_below="@+id/bench"
+            android:layout_gravity="center_horizontal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Squat"
+            android:id="@+id/squat"
+            android:textColor="#ffffff"
+            android:textSize="32dp"
+            android:layout_below="@+id/imageView"
+            android:layout_gravity="center_horizontal"/>
+
+        <ImageView
+            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/legpresspic"
+            android:src="@drawable/squat"
+            android:layout_below="@+id/squat"
+            android:layout_gravity="center_horizontal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Overhead Press"
+            android:id="@+id/ohp"
+            android:textColor="#ffffff"
+            android:textSize="32dp"
+            android:layout_below="@+id/legpresspic"
+            android:layout_gravity="center_horizontal"/>
+        <ImageView
+            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ohppic"
+            android:src="@drawable/militarypress"
+            android:layout_below="@+id/ohp"
+            android:layout_gravity="center_horizontal"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BACK"
+            android:id="@+id/Sday5BACK"
+            android:layout_gravity="left|bottom"
+            android:layout_below="@+id/calfpresspic"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Bench Press
- - Hepburn Method"
-        android:id="@+id/bench"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="175dp"
-        android:textColor="#ffffff"
-        android:textSize="22dp" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_gravity="right|top"
-        android:layout_marginBottom="150dp"
-        android:src="@drawable/bench" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Squat"
-        android:id="@+id/squat"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="20dp"
-        android:textColor="#ffffff"
-        android:textSize="22dp" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/legpresspic"
-        android:layout_gravity="right|center"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/squat" />
 
-    <TextView
-        android:layout_width="219dp"
-        android:layout_height="63dp"
-        android:text="Overhead Press"
-        android:id="@+id/ohp"
-        android:layout_gravity="bottom|center_vertical"
-        android:layout_marginBottom="100dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ohppic"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="60dp"
-        android:src="@drawable/militarypress" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BACK"
-        android:id="@+id/Sday5BACK"
-        android:layout_gravity="center_horizontal|bottom" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView10"
-        android:layout_gravity="left|top" />
-</LinearLayout>>
+    </LinearLayout>>
 
     </ScrollView>
 
