--- a/app/src/main/res/layout/fragment_body_building_day_five.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_five.xml
@@ -13,115 +13,116 @@
         android:layout_width="fill_parent"
         android:orientation="vertical"
         >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="BODY BUILDING DAY 5"
+            android:id="@+id/bbDay5"
+            android:layout_gravity="center_horizontal|top"
+            android:textColor="#ffffff" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Military Press"
+            android:id="@+id/militaryPressText"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/bbDay5"
+            android:textColor="#ffffff"
+            android:textSize="32dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Military Press"
-        android:id="@+id/militaryPressText"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="175dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp" />
+        <ImageView
+            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/militaryPressImage"
+            android:layout_below="@+id/militaryPressText"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/militarypress"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 Sets of 8-10 Repetitions. 1 minute rest between sets"
+            android:id="@+id/militaryPressDetail"
+            android:layout_below="@+id/militaryPressImage"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Side Lateral Raises"
+            android:id="@+id/sideRaiseText"
+            android:layout_below="@+id/militaryPressDetail"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff"
+            android:textSize="32dp"
+            />
+        <ImageView
+            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sideLatImage"
+            android:layout_below="@+id/sideRaiseText"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/dumbbelllatraise" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 Sets of 12 very light weight repetitions. "
+            android:id="@+id/sideLatRaiseDetail"
+            android:layout_below="@+id/sideLatImage"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff" />
 
-    <TextView
-        android:layout_width="234dp"
-        android:layout_height="34dp"
-        android:text="4 Sets of 8-10 Repetitions. 1 minute rest between sets"
-        android:layout_marginBottom="155dp"
-        android:id="@+id/militaryPressDetail"
-        android:layout_gravity="left|center_vertical"
-        android:textColor="#ffffff" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Shoulder Press"
+            android:id="@+id/shoulderPressText"
+            android:layout_below="@+id/sideLatRaiseDetail"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff"
+            android:textSize="32dp" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/militaryPressImage"
-        android:layout_gravity="right|top"
-        android:layout_marginBottom="150dp"
-        android:src="@drawable/militarypress"
-        android:layout_marginTop="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Side Lateral Raises"
-        android:id="@+id/sideRaiseText"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="40dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp" />
+        <ImageView
+            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/shoulderpressImage"
+            android:layout_below="@+id/shoulderPressText"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/shoulderpress" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sideLatImage"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginBottom="35dp"
-        android:src="@drawable/dumbbelllatraise" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 sets of 10 repetitions."
+            android:id="@+id/shoulderPressDetail"
+            android:layout_below="@+id/shoulderpressImage"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff" />
 
-    <TextView
-        android:layout_width="206dp"
-        android:layout_height="49dp"
-        android:text="4 Sets of 12 very light weight repetitions. "
-        android:id="@+id/sideLatRaiseDetail"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="20dp"
-        android:textColor="#ffffff" />
 
-    <TextView
-        android:layout_width="177dp"
-        android:layout_height="34dp"
-        android:text="4 sets of 10 repetitions."
-        android:id="@+id/shoulderPressDetail"
-        android:layout_gravity="left|bottom"
-        android:layout_marginBottom="120dp"
-        android:textColor="#ffffff" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BACK"
+            android:id="@+id/BBBack"
+            android:layout_gravity="left|bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="184dp"
-        android:layout_height="59dp"
-        android:text="Shoulder Press"
-        android:id="@+id/shoulderPressText"
-        android:layout_gravity="left|bottom"
-        android:layout_marginBottom="125dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Workout Complete!"
+            android:id="@+id/completeDay5bb"
+            android:layout_gravity="right|bottom" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/shoulderpressImage"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="70dp"
-        android:src="@drawable/shoulderpress" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="BODY BUILDING DAY 5"
-        android:id="@+id/bbDay5"
-        android:layout_gravity="center_horizontal|top"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Workout Complete!"
-        android:id="@+id/completeDay5bb"
-        android:layout_gravity="right|bottom" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BACK"
-        android:id="@+id/BBBack"
-        android:layout_gravity="left|bottom" />
     </LinearLayout>>
 
     </ScrollView>
