--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -39,8 +39,92 @@
             android:layout_height="wrap_content"
             android:id="@+id/runningImage"
             android:src="@drawable/running"
+            android:layout_gravity="center_horizontal"
             android:layout_below="@+id/warmupRunText"
             />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choice of treadmill or laps around track"
+            android:id="@+id/warmupDetail"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/runningImage"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Walking lunges"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/warmupDetail"
+            android:textColor="#ffffff"
+            android:textSize="32dp"
+            android:id="@+id/walkingLungesText" />
+
+        <ImageView
+            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lungesImage"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/walkingLungesText"
+            android:src="@drawable/lunges"
+
+             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3 Sets of 12 lounger per leg with 50-100 lbs on shoulders (depending on skill level)"
+            android:id="@+id/lungesDetail"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/lungesImage"
+            android:textColor="#ffffff" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jump rope"
+            android:id="@+id/jumpropeText"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/lungesDetail"
+            android:textColor="#ffffff"
+            android:textSize="32dp"
+            />
+
+        <ImageView
+            android:scaleType="fitXY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/jumpRopeImage"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/jumpropeText"
+            android:src="@drawable/jump_rope"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4 sets of 30 seconds"
+            android:id="@+id/jumpropeDetail"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/jumpRopeImage"
+
+            android:textColor="#ffffff" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Workout Complete!"
+            android:id="@+id/completeDay1wl"
+            android:layout_gravity="right|bottom" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BACK"
+            android:id="@+id/WLBack"
+            android:layout_gravity="left|bottom" />
 
 
 
