--- a/app/src/main/res/layout/fragment_weightloss_day_three.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_three.xml
@@ -14,114 +14,118 @@
             android:orientation="vertical"
             >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Bicycle warm up"
-        android:id="@+id/warmupCycleText"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="175dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="WEIGHT LOSS DAY 3"
+                android:id="@+id/wlDay3"
+                android:layout_gravity="center_horizontal|top"
+                android:textColor="#ffffff" />
 
-    <TextView
-        android:layout_width="234dp"
-        android:layout_height="34dp"
-        android:layout_marginBottom="155dp"
-        android:id="@+id/warmupDetail"
-        android:layout_gravity="left|center_vertical"
-        android:textColor="#ffffff"
-        android:text="5-10 minute cyle " />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Bicycle warm up"
+                android:id="@+id/warmupCycleText"
+                android:layout_below = "@+id/w1Day3"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#ffffff"
+                android:textSize="32dp" />
 
-    <TextView
-        android:layout_width="219dp"
-        android:layout_height="63dp"
-        android:text="Pull-ups"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="40dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp"
-        android:id="@+id/pullupText" />
+            <ImageView
+                android:scaleType="fitXY"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/cycleImage"
+                android:layout_gravity="center_horizontal"
+                android:layout_below = "@+id/warmupCycleText"
+                android:src="@drawable/cycle" />
 
-    <TextView
-        android:layout_width="206dp"
-        android:layout_height="49dp"
-        android:text="4 Sets of 6-12 reps (depending on skill lever)"
-        android:id="@+id/pullupDetail"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="20dp"
-        android:textColor="#ffffff" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below = "@+id/cycleImage"
+                android:id="@+id/warmupDetail"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#ffffff"
+                android:text="5-10 minute cyle " />
 
-    <TextView
-        android:layout_width="177dp"
-        android:layout_height="34dp"
-        android:text="3 sets of 6-10 reps (depending on skill level)"
-        android:id="@+id/burpeesDetail"
-        android:layout_gravity="left|bottom"
-        android:layout_marginBottom="120dp"
-        android:textColor="#ffffff" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pull-ups"
+                android:layout_gravity="center_horizontal"
+                android:layout_below = "@+id/warmupDetail"
+                android:textColor="#ffffff"
+                android:textSize="32dp"
+                android:id="@+id/pullupText" />
 
-    <TextView
-        android:layout_width="178dp"
-        android:layout_height="59dp"
-        android:text="Burpees"
-        android:id="@+id/burpeesText"
-        android:layout_gravity="left|bottom"
-        android:layout_marginBottom="125dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp" />
+            <ImageView
+                android:scaleType="fitXY"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/pullupImage"
+                android:layout_gravity="center_horizontal"
+                android:layout_below = "@+id/pullupText"
+                android:src="@drawable/pullup" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="WEIGHT LOSS DAY 3"
-        android:id="@+id/wlDay3"
-        android:layout_gravity="center_horizontal|top"
-        android:textColor="#ffffff" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4 Sets of 6-12 reps (depending on skill level)"
+                android:id="@+id/pullupDetail"
+                android:layout_gravity="center_horizontal"
+                android:layout_below = "@+id/pullupImage"
+                android:textColor="#ffffff" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/cycleImage"
-        android:layout_gravity="right|top"
-        android:layout_marginBottom="35dp"
-        android:src="@drawable/cycle" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Burpees"
+                android:id="@+id/burpeesText"
+                android:layout_gravity="center_horizontal"
+                android:layout_below = "@+id/pullupDetail"
+                android:textColor="#ffffff"
+                android:textSize="32dp" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/pullupImage"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginBottom="35dp"
-        android:src="@drawable/pullup" />
+            <ImageView
+                android:scaleType="fitXY"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/burpeesImage"
+                android:layout_gravity="center_horizontal"
+                android:layout_below = "@+id/burpeesText"
+                android:src="@drawable/burpees" />
 
-    <ImageView
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/burpeesImage"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="35dp"
-        android:src="@drawable/burpees" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3 sets of 6-10 reps (depending on skill level)"
+                android:id="@+id/burpeesDetail"
+                android:layout_gravity="center_horizontal"
+                android:layout_below = "@+id/burpeesImage"
+                android:textColor="#ffffff" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Workout Complete!"
-        android:id="@+id/completeDay1wl"
-        android:layout_gravity="right|bottom" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Workout Complete!"
+                android:id="@+id/completeDay1wl"
+                android:layout_gravity="right|bottom" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BACK"
-        android:id="@+id/WLBack"
-        android:layout_gravity="left|bottom" />
-</LinearLayout>>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BACK"
+                android:id="@+id/WLBack"
+                android:layout_gravity="left|bottom" />
+
+
+
+
+        </LinearLayout>>
 
     </ScrollView>
 
