--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -36,7 +36,16 @@
         android:id="@+id/TPBack"
         android:layout_gravity="center_horizontal|bottom" />
 
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="232dp"
+            android:id="@+id/listView2"
+            android:textAlignment="center"
+            android:layout_gravity="center_horizontal|bottom" />
+
 </LinearLayout>>
 
     </ScrollView>
+
+
 </FrameLayout>
